# pokemon-tcg-clone

./: README.md  pyproject.toml
src/: main.py
src/app/: app.py  conf.py  lib.py  main.py
src/states/: game.py  menu.py
