[project]
name = "pokemon-tcg-clone"
version = "0.1.0"
description = ""
authors = [
    {name = "Icecreambobcat",email = "icekingrex123@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce (>=2.5.3,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
